fix(components): align tag text

--- a/packages/components/src/client/styles/tag.scss
+++ b/packages/components/src/client/styles/tag.scss
@@ -16,6 +16,7 @@
     font-size: 0.625rem;
     font-weight: bold;
     line-height: 1.5;
+    text-align: center;
 
     display: inline-block;
     vertical-align: middle;
